[gd_scene load_steps=18 format=3 uid="uid://cfgqkkv7sgnga"]

[ext_resource type="Script" path="res://Mundos/mundoPrincipe.gd" id="1_b7rtj"]
[ext_resource type="Resource" uid="uid://csb11t11255g1" path="res://Personagens/Scripts Enemies/PrincipeB.tres" id="2_2udn1"]
[ext_resource type="Texture2D" uid="uid://dtleitfd88vdg" path="res://Mundos/Cenários/Cenario4B.png" id="3_awrw8"]
[ext_resource type="Texture2D" uid="uid://hhjdiug22els" path="res://Personagens/Principe 1B/Principe1B.png" id="4_0fjch"]
[ext_resource type="Texture2D" uid="uid://c1je5vjbbasfx" path="res://Personagens/Principe 1B/Principe2B.png" id="5_u06bp"]
[ext_resource type="Texture2D" uid="uid://bfnjcgc1ok34s" path="res://Personagens/Principe 1B/Principe3B.png" id="6_7w42v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vfff"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8ai5"]
bg_color = Color(0, 0.662745, 0.137255, 1)

[sub_resource type="SystemFont" id="SystemFont_j4woa"]
font_names = PackedStringArray("Comic Sans MS")
subpixel_positioning = 0
oversampling = 6.0

[sub_resource type="SystemFont" id="SystemFont_2fm2a"]
font_names = PackedStringArray("Comic Sans MS")
subpixel_positioning = 0
oversampling = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pv7mu"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsqox"]
bg_color = Color(0.870588, 0.870588, 0.870588, 1)

[sub_resource type="SystemFont" id="SystemFont_yr8sk"]
font_names = PackedStringArray("Comic Sans MS")
subpixel_positioning = 0
oversampling = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojf28"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_osx2e"]
bg_color = Color(0.870588, 0.870588, 0.870588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43wit"]
bg_color = Color(0.870588, 0.870588, 0.870588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xk0b2"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Cena4" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_b7rtj")
Enemy = ExtResource("2_2udn1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_awrw8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visibility_layer = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = 32.0
offset_right = 1088.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 16)
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
visibility_layer = 3
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_1vfff")
theme_override_styles/fill = SubResource("StyleBoxFlat_i8ai5")
max_value = 2.0
value = 1.0
show_percentage = false

[node name="Label" type="Label" parent="VBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -712.0
offset_top = 2.5
offset_right = -1582.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_j4woa")
text = "1/2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Guarda" type="Node2D" parent="."]

[node name="Normal_sprite" type="TextureRect" parent="Guarda"]
offset_left = 544.0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_0fjch")

[node name="Feliz_sprite" type="TextureRect" parent="Guarda"]
visible = false
offset_left = 544.0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("5_u06bp")

[node name="Bravo_sprite" type="TextureRect" parent="Guarda"]
visible = false
offset_left = 536.0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("6_7w42v")

[node name="ActionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 928.0
offset_right = 40.0
offset_bottom = 928.0
grow_horizontal = 2
grow_vertical = 2

[node name="Acoes" type="HBoxContainer" parent="ActionsPanel"]
layout_mode = 0
offset_right = 368.0
offset_bottom = 40.0
scale = Vector2(2, 2)

[node name="acoes" type="Button" parent="ActionsPanel/Acoes"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_2fm2a")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_pv7mu")
theme_override_styles/hover = SubResource("StyleBoxFlat_wsqox")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wsqox")
text = "Ações"

[node name="Itens" type="Button" parent="ActionsPanel/Acoes"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_2fm2a")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_pv7mu")
theme_override_styles/hover = SubResource("StyleBoxFlat_wsqox")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wsqox")
text = "Itens"

[node name="Correr" type="Button" parent="ActionsPanel/Acoes"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_2fm2a")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_pv7mu")
theme_override_styles/hover = SubResource("StyleBoxFlat_wsqox")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wsqox")
text = "Ir Embora"

[node name="Menu_acoes" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 40.0
offset_top = 656.0
offset_right = 368.0
offset_bottom = 832.0
scale = Vector2(1.3, 1.5)

[node name="PiadasAdultas" type="Button" parent="Menu_acoes"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yr8sk")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ojf28")
theme_override_styles/hover = SubResource("StyleBoxFlat_osx2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43wit")
text = "Piadas Adultas"

[node name="PiadasComplexas" type="Button" parent="Menu_acoes"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yr8sk")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ojf28")
theme_override_styles/hover = SubResource("StyleBoxFlat_osx2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43wit")
text = "Piadas Complexas"

[node name="PiadasBobas" type="Button" parent="Menu_acoes"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yr8sk")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ojf28")
theme_override_styles/hover = SubResource("StyleBoxFlat_osx2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43wit")
text = "Piadas Bobas"

[node name="Imitações" type="Button" parent="Menu_acoes"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yr8sk")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ojf28")
theme_override_styles/hover = SubResource("StyleBoxFlat_osx2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43wit")
text = "Imitações"

[node name="Musica" type="Button" parent="Menu_acoes"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yr8sk")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ojf28")
theme_override_styles/hover = SubResource("StyleBoxFlat_osx2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43wit")
text = "Música"

[node name="Menu_itens" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 288.0
offset_top = 712.0
offset_right = 616.0
offset_bottom = 852.0
scale = Vector2(1.3, 1.5)

[node name="Buzina" type="Button" parent="Menu_itens"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yr8sk")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ojf28")
theme_override_styles/hover = SubResource("StyleBoxFlat_osx2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43wit")
text = "Buzina"

[node name="Fantoche" type="Button" parent="Menu_itens"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yr8sk")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ojf28")
theme_override_styles/hover = SubResource("StyleBoxFlat_osx2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43wit")
text = "Fantoche"

[node name="Pena" type="Button" parent="Menu_itens"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yr8sk")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ojf28")
theme_override_styles/hover = SubResource("StyleBoxFlat_osx2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43wit")
text = "Pena"

[node name="Bichinho de Balão" type="Button" parent="Menu_itens"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yr8sk")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ojf28")
theme_override_styles/hover = SubResource("StyleBoxFlat_osx2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43wit")
text = "Bichinho de Água"

[node name="TextBox" type="Panel" parent="."]
layout_mode = 0
offset_left = 1032.0
offset_top = 816.0
offset_right = 1856.0
offset_bottom = 1024.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xk0b2")

[node name="Label" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0194175
anchor_top = 0.0769231
anchor_right = 0.980583
anchor_bottom = 0.923077
theme_override_font_sizes/font_size = 28
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ActionsPanel/Acoes/acoes" to="." method="_on_acoes_pressed"]
[connection signal="pressed" from="ActionsPanel/Acoes/Itens" to="." method="_on_itens_pressed"]
[connection signal="pressed" from="ActionsPanel/Acoes/Correr" to="." method="_on_correr_pressed"]
[connection signal="pressed" from="Menu_acoes/PiadasAdultas" to="." method="_on_piadas_adultas_pressed"]
[connection signal="pressed" from="Menu_acoes/PiadasComplexas" to="." method="_on_piadas_complexas_pressed"]
[connection signal="pressed" from="Menu_acoes/PiadasBobas" to="." method="_on_piadas_bobas_pressed"]
[connection signal="pressed" from="Menu_acoes/Imitações" to="." method="_on_imitações_pressed"]
[connection signal="pressed" from="Menu_acoes/Musica" to="." method="_on_musica_pressed"]
[connection signal="pressed" from="Menu_itens/Buzina" to="." method="_on_buzina_pressed"]
[connection signal="pressed" from="Menu_itens/Fantoche" to="." method="_on_fantoche_pressed"]
[connection signal="pressed" from="Menu_itens/Pena" to="." method="_on_pena_pressed"]
[connection signal="pressed" from="Menu_itens/Bichinho de Balão" to="." method="_on_bichinho_de_balão_pressed"]
